1999-05-25  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpauth.c:
	    Don't log incoming BASE64-encoded passwords.

1999-05-17  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpdata.c:
	    Be a bit sloppy with DATA statement which follows
	    with white-space.. (or whatnot..)  On the other
	    hand, if "-s strict" mode is on, complain!

1999-05-16  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/mailbox/mailbox.c:
	    Add '-U' option for selectively turning on the 'X-UIDL:'
	    creation while storing to mailboxes and files (but it
	    won't be created while sending to a pipe).

	* libsh/listmalloc.c:
	    Some ANSI-C present, which the K&R compiler at SunOS 4.1.4
	    didn't like at all..

1999-05-15  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* README.CRYPTO, bin/usa-itar-stripper.sh, Makefile.in,
	  smtpserver/smtpauth.c, smtpserver/smtpcmds.c,
	  smtpserver/smtpserver.c, smtpserver/smtpserver.h,
	  smtpserver/smtptls.c:
	    Modifications and tools to allow package management
	    to be done with command:  'make dist-usa'
	    The resulting TAR file should be US ITAR compliant.

	* include/listutils.h:
	    K&R compiler reminder; all the world isn't ANSI...

	* transports/mailbox/mailbox.c:
	    Don't generate X-UIDL: header when sending the message
	    thru a pipe...

	* transports/smtp/smtp.c:
	    Hunting the reason for SEGV in case ALRM triggers in
	    a few odd situations.

	* scheduler/transport.c:
	    If the command= line for some channel/host selector
	    tag contains $-expression for ZENV variable, and that
	    variable does not exist, the scheduler did crash..
	
1999-05-14  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* VERSION 2.99.50s18

	* smtpserver/smtpdata.c:
	    BASE64 encoding of 7 chars long name yields a BASE64 string
	    with two '=' chars, that was considered bad by the decoder..
	    ( I think there should be only one '=' char, but Netscape
	      Communicator 4.51 does it that way :-(  )

	* router/functions.c: