@@ -1,3 +1,14 @@
+1999-05-26  Matti Aarnio  <mea@mea.tmt.tele.fi>
+
+	* router/db.c:
+	    Modify cache definitions -- zero them at the local db's
+
+	* router/rfc822.c, transports/libta/ctlopen.c:
+	    Apeace Solaris 2.6 / gcc 2.7.2.3 "-O2 -Wall" compilation
+
+	* proto/smtpserver.conf.in:
+	    Cleanup (a bit) the default settings
+
 1999-05-25  Matti Aarnio  <mea@mea.tmt.tele.fi>
 
 	* smtpserver/smtpauth.c:
